tests/integrationTests/tests/tutorial_09_java_testing/validation/does_not_compile_test01_STDERR.txt
Factorial.java:24: error: cannot find symbol
	    return tailFac(n-1, acc*n);
	           ^
  symbol:   method tailFac(int,int)
  location: class Factorial
1 error
